# Manga-Segment

./: .gitignore  404.html  README.md  index.html  manifest.webmanifest  metadata.py  pyproject.toml  sw.js  workbox-cd935d7f.js
assets/: _ui-BA4PhXFA.js  _ui-CPUOgVxh.js  _ui-DBBI3yre.js  index-BqQ-WDPw.css  index-Cq3tNaTf.css  index-CzW7EfT8.js  index-VApELihD.js  manga-segment-CHRfo0qe.js  manga-segment-apxdAftG.js  manga-segment-vQ0IXO_S.js  mangaModel-DrhCVYhE.js  mangaModel-Mr01H0UY.js
docs/: CLI.md
manga/models/yolo11s/: args.yaml  results.csv
manga/models/yolo26s/: args.yaml  results.csv
manga/models/yolo8s/: args.yaml  results.csv
precomputed/: manifest.json
precomputed/manga-segment/: metadata.json
precomputed/manga-segment/onnx/: hero.json  manifest.json
src/: README.md  interactive.py  main.py
src/algorithms/: __init__.py
src/algorithms/unet/: __init__.py  algorithm.py  architecture.py  data.py  preprocess.py  segmenter.py
src/algorithms/yolo/: __init__.py  algorithm.py  benchmark.py  models.py  segmenter.py  weights.py
src/core/: __init__.py  algorithm.py  dataset.py  device.py  imaging.py  paths.py  registry.py  segmenter.py  visualize.py
src/dataset/: __init__.py  class_videos.py  ctd_teacher.py  dashboard.py  distill.py  download.py  ensemble_teacher.py  overlay.py  paddleocr_teacher.py  run.py
src/serving/: __init__.py  app.py  download.py  format.py
training/: main.py  pyproject.toml  requirements.txt
training/unet/: convert.py  convertImages.py  model.py  tensor.py  training.py
training/unet/functions/: getData.py
training/yolo/: model.py  test.py  training.py  utils.py
