[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "ruff>=0.15.9",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.33",
]

[tool.ruff]
ignore = ["W191", "E111", "E114", "E117"]

[tool.ruff.format]
indent-style = "tab"
